// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip SNAPSHOTS should render 1`] = `
<Tooltip
  title="Tips"
>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="tooltip-wrapper"
  >
    Test
  </div>
  <TooltipBody
    position="top"
    theme={
      Object {
        "bottom": "tooltip bottom",
        "left": "tooltip left",
        "right": "tooltip right",
        "top": "tooltip top",
        "wrapper": "tooltip-wrapper",
      }
    }
    title="Tips"
  >
    <Portal
      containerInfo={
        <body>
          <div
            class="tooltip top"
            style="opacity: 0; height: 0px; left: -99999px;"
          >
            <div>
              Tips
            </div>
          </div>
        </body>
      }
    >
      <div
        className="tooltip top"
      >
        <div>
          Tips
        </div>
      </div>
    </Portal>
  </TooltipBody>
</Tooltip>
`;

exports[`Tooltip SNAPSHOTS should render isOpened state 1`] = `
<Tooltip
  isOpen={true}
  title="Tips"
>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="tooltip-wrapper"
  >
    Test
  </div>
  <TooltipBody
    position="top"
    theme={
      Object {
        "bottom": "tooltip bottom",
        "left": "tooltip left",
        "right": "tooltip right",
        "top": "tooltip top",
        "wrapper": "tooltip-wrapper",
      }
    }
    title="Tips"
  >
    <Portal
      containerInfo={
        <body>
          <div
            class="tooltip top"
          >
            <div>
              Tips
            </div>
          </div>
        </body>
      }
    >
      <div
        className="tooltip top"
      >
        <div>
          Tips
        </div>
      </div>
    </Portal>
  </TooltipBody>
</Tooltip>
`;
